--- a/result/2022-01-19.md
+++ b/result/2022-01-19.md
@@ -19,11 +19,11 @@
 19. [美中情局涉嫌资助对311名儿童做人体实验](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E4%B8%AD%E6%83%85%E5%B1%80%E6%B6%89%E5%AB%8C%E8%B5%84%E5%8A%A9%E5%AF%B9311%E5%90%8D%E5%84%BF%E7%AB%A5%E5%81%9A%E4%BA%BA%E4%BD%93%E5%AE%9E%E9%AA%8C%23&Refer=top) 286388
 20. [快递单上的这种码不要扫](https://s.weibo.com//weibo?q=%23%E5%BF%AB%E9%80%92%E5%8D%95%E4%B8%8A%E7%9A%84%E8%BF%99%E7%A7%8D%E7%A0%81%E4%B8%8D%E8%A6%81%E6%89%AB%23&Refer=top) 271450
 21. [广东人宅家自制烤肉自助](https://s.weibo.com//weibo?q=%E5%B9%BF%E4%B8%9C%E4%BA%BA%E5%AE%85%E5%AE%B6%E8%87%AA%E5%88%B6%E7%83%A4%E8%82%89%E8%87%AA%E5%8A%A9&Refer=top) 269722
-22. [深圳女子称收到国际快递后变黄码](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%A5%B3%E5%AD%90%E7%A7%B0%E6%94%B6%E5%88%B0%E5%9B%BD%E9%99%85%E5%BF%AB%E9%80%92%E5%90%8E%E5%8F%98%E9%BB%84%E7%A0%81%23&Refer=top) 243996
-23. [火山灰其实不是灰](https://s.weibo.com//weibo?q=%23%E7%81%AB%E5%B1%B1%E7%81%B0%E5%85%B6%E5%AE%9E%E4%B8%8D%E6%98%AF%E7%81%B0%23&Refer=top) 230254
-24. [西安交大一学生私自驾车离校至成都](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E4%BA%A4%E5%A4%A7%E4%B8%80%E5%AD%A6%E7%94%9F%E7%A7%81%E8%87%AA%E9%A9%BE%E8%BD%A6%E7%A6%BB%E6%A0%A1%E8%87%B3%E6%88%90%E9%83%BD%23&Refer=top) 229903
-25. [丁程鑫 环球影城](https://s.weibo.com//weibo?q=%E4%B8%81%E7%A8%8B%E9%91%AB%20%E7%8E%AF%E7%90%83%E5%BD%B1%E5%9F%8E&Refer=top) 228558
-26. [频繁做噩梦会增加心梗风险](https://s.weibo.com//weibo?q=%23%E9%A2%91%E7%B9%81%E5%81%9A%E5%99%A9%E6%A2%A6%E4%BC%9A%E5%A2%9E%E5%8A%A0%E5%BF%83%E6%A2%97%E9%A3%8E%E9%99%A9%23&Refer=top) 227786
+22. [频繁做噩梦会增加心梗风险](https://s.weibo.com//weibo?q=%23%E9%A2%91%E7%B9%81%E5%81%9A%E5%99%A9%E6%A2%A6%E4%BC%9A%E5%A2%9E%E5%8A%A0%E5%BF%83%E6%A2%97%E9%A3%8E%E9%99%A9%23&Refer=top) 245469
+23. [深圳女子称收到国际快递后变黄码](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%A5%B3%E5%AD%90%E7%A7%B0%E6%94%B6%E5%88%B0%E5%9B%BD%E9%99%85%E5%BF%AB%E9%80%92%E5%90%8E%E5%8F%98%E9%BB%84%E7%A0%81%23&Refer=top) 243996
+24. [火山灰其实不是灰](https://s.weibo.com//weibo?q=%23%E7%81%AB%E5%B1%B1%E7%81%B0%E5%85%B6%E5%AE%9E%E4%B8%8D%E6%98%AF%E7%81%B0%23&Refer=top) 230254
+25. [西安交大一学生私自驾车离校至成都](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E4%BA%A4%E5%A4%A7%E4%B8%80%E5%AD%A6%E7%94%9F%E7%A7%81%E8%87%AA%E9%A9%BE%E8%BD%A6%E7%A6%BB%E6%A0%A1%E8%87%B3%E6%88%90%E9%83%BD%23&Refer=top) 229903
+26. [丁程鑫 环球影城](https://s.weibo.com//weibo?q=%E4%B8%81%E7%A8%8B%E9%91%AB%20%E7%8E%AF%E7%90%83%E5%BD%B1%E5%9F%8E&Refer=top) 228558
 27. [北京调整进返京政策](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E8%B0%83%E6%95%B4%E8%BF%9B%E8%BF%94%E4%BA%AC%E6%94%BF%E7%AD%96%23&Refer=top) 226720
 28. [深圳疫情](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E7%96%AB%E6%83%85%23&Refer=top) 215465
 29. [深圳女子称收到香港快递后变黄码](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%A5%B3%E5%AD%90%E7%A7%B0%E6%94%B6%E5%88%B0%E9%A6%99%E6%B8%AF%E5%BF%AB%E9%80%92%E5%90%8E%E5%8F%98%E9%BB%84%E7%A0%81%23&Refer=top) 212549
@@ -41,3 +41,4 @@
 41. [2022最小满月晴好天气自家阳台可观赏](https://s.weibo.com//weibo?q=%232022%E6%9C%80%E5%B0%8F%E6%BB%A1%E6%9C%88%E6%99%B4%E5%A5%BD%E5%A4%A9%E6%B0%94%E8%87%AA%E5%AE%B6%E9%98%B3%E5%8F%B0%E5%8F%AF%E8%A7%82%E8%B5%8F%23&Refer=top) 137130
 42. [虎卡 晋升](https://s.weibo.com//weibo?q=%E8%99%8E%E5%8D%A1%20%E6%99%8B%E5%8D%87&Refer=top) 111340
 43. [汤加火山](https://s.weibo.com//weibo?q=%23%E6%B1%A4%E5%8A%A0%E7%81%AB%E5%B1%B1%23&Refer=top) 111270
+44. [陈飞宇说应该提前买个保险](https://s.weibo.com//weibo?q=%23%E9%99%88%E9%A3%9E%E5%AE%87%E8%AF%B4%E5%BA%94%E8%AF%A5%E6%8F%90%E5%89%8D%E4%B9%B0%E4%B8%AA%E4%BF%9D%E9%99%A9%23&Refer=top) 109986
