--- a/result/2022-01-20.md
+++ b/result/2022-01-20.md
@@ -36,4 +36,5 @@
 36. [80后90后的青春疼痛歌曲](https://s.weibo.com//weibo?q=%2380%E5%90%8E90%E5%90%8E%E7%9A%84%E9%9D%92%E6%98%A5%E7%96%BC%E7%97%9B%E6%AD%8C%E6%9B%B2%23&Refer=top) 123877
 37. [酥脆奶香玉米烙](https://s.weibo.com//weibo?q=%23%E9%85%A5%E8%84%86%E5%A5%B6%E9%A6%99%E7%8E%89%E7%B1%B3%E7%83%99%23&Refer=top) 122995
 38. [这滑板算是被玩明白了](https://s.weibo.com//weibo?q=%23%E8%BF%99%E6%BB%91%E6%9D%BF%E7%AE%97%E6%98%AF%E8%A2%AB%E7%8E%A9%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 93203
-39. [2022WTT澳门冠军赛](https://s.weibo.com//weibo?q=%232022WTT%E6%BE%B3%E9%97%A8%E5%86%A0%E5%86%9B%E8%B5%9B%23&Refer=top) 76533
+39. [2022WTT澳门冠军赛](https://s.weibo.com//weibo?q=%232022WTT%E6%BE%B3%E9%97%A8%E5%86%A0%E5%86%9B%E8%B5%9B%23&Refer=top) 78979
+40. [新冠病毒在纸上可存活2小时](https://s.weibo.com//weibo?q=%23%E6%96%B0%E5%86%A0%E7%97%85%E6%AF%92%E5%9C%A8%E7%BA%B8%E4%B8%8A%E5%8F%AF%E5%AD%98%E6%B4%BB2%E5%B0%8F%E6%97%B6%23&Refer=top) 59269
